samples/_failures_safe/1761613624_d0a1cc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c1ea4919.c: In function ‘main’:
./samples/SAFE/__tmp_c1ea4919.c:165:13: error: expected ‘;’ at end of input
  165 |     return 0
      |             ^
      |             ;
./samples/SAFE/__tmp_c1ea4919.c:165:5: error: expected declaration or statement at end of input
  165 |     return 0
      |     ^~~~~~
